# esd-2020-final

./: .gitignore  Makefile  README.md  dlib_test.cpp  gui.hpp  gui_test.cpp  point_set_compare.hpp
examples/: Makefile  display_utils.h  features.hpp  hog_test.cpp
face-recognition-arm/: CMakeLists.txt  Makefile  display_utils.h  face_recognition.cpp  gui.hpp
face-trainer/: CMakeLists.txt  face_capturer.cpp  face_collector.cpp  face_trainer.cpp
